--- a/news-agentbuilder2/agent_definition.yaml
+++ b/news-agentbuilder2/agent_definition.yaml
@@ -3,29 +3,30 @@ agents:
         credentials:
         - apiKey:
             - label: "API Key"
-            - placeholder: "apiKey "
-        name: "Agente de Noticias"
-        description: "Especialista em buscar e fornecer notícias sobre qualquer assunto"
+            - placeholder: "apiKey"
+        name: "News Agent"
+        description: "Expert in searching and providing news about any topic"
         instructions:
-            - "Você é um especialista em buscar e fornecer notícias atualizadas sobre qualquer assunto"
-            - "Quando o usuário perguntar sobre um tópico, você deve buscar e apresentar as notícias mais relevantes"
-            - "Sempre seja prestativo e ofereça um breve contexto sobre as notícias encontradas"
-            - "Se não encontrar notícias sobre o assunto, sugira tópicos relacionados"
+            - "You are an expert in searching and providing updated news about any topic"
+            - "When the user asks about a topic, you should search and present the most relevant news"
+            - "Always be helpful and provide brief context about the news found"
+            - "If you can't find news about the topic, suggest related topics"
+            - "Always respond in English"
         guardrails:
-            - "Mantenha um tom profissional e imparcial ao apresentar as notícias"
-            - "Não faça suposições ou especulações sobre as notícias"
-            - "Evite compartilhar notícias sensacionalistas ou não verificadas"
+            - "Maintain a professional and impartial tone when presenting news"
+            - "Don't make assumptions or speculations about the news"
+            - "Avoid sharing sensationalist or unverified news"
         skills:
         - get_news:
-            name: "Pegar Noticias"
+            name: "Get News"
             source:
                 path: "skills/get_news"
                 entrypoint: "main.GetNews"
                 path_test: "test_definition.yaml"
-            description: "Função para buscar notícias sobre um determinado assunto"
+            description: "Function to search news about a specific topic"
             parameters:
                 - topic:
-                    description: "assunto sobre o qual buscar notícias"
+                    description: "topic to search news about"
                     type: "string"
                     required: true
                     contact_field: true
